; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/config/rs6000/extr_rs6000.c_rs6000_emit_vector_cond_expr.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/config/rs6000/extr_rs6000.c_rs6000_emit_vector_cond_expr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TARGET_ALTIVEC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rs6000_emit_vector_cond_expr(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @GET_MODE(i32 %17)
  store i32 %18, i32* %14, align 4
  %19 = load i32, i32* %11, align 4
  %20 = call i32 @GET_CODE(i32 %19)
  store i32 %20, i32* %15, align 4
  %21 = load i32, i32* @TARGET_ALTIVEC, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  br label %35

24:                                               ; preds = %6
  %25 = load i32, i32* %15, align 4
  %26 = load i32, i32* %12, align 4
  %27 = load i32, i32* %13, align 4
  %28 = load i32, i32* %14, align 4
  %29 = call i32 @rs6000_emit_vector_compare(i32 %25, i32 %26, i32 %27, i32 %28)
  store i32 %29, i32* %16, align 4
  %30 = load i32, i32* %8, align 4
  %31 = load i32, i32* %9, align 4
  %32 = load i32, i32* %10, align 4
  %33 = load i32, i32* %16, align 4
  %34 = call i32 @rs6000_emit_vector_select(i32 %30, i32 %31, i32 %32, i32 %33)
  store i32 1, i32* %7, align 4
  br label %35

35:                                               ; preds = %24, %23
  %36 = load i32, i32* %7, align 4
  ret i32 %36
}

declare dso_local i32 @GET_MODE(i32) #1

declare dso_local i32 @GET_CODE(i32) #1

declare dso_local i32 @rs6000_emit_vector_compare(i32, i32, i32, i32) #1

declare dso_local i32 @rs6000_emit_vector_select(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
